# unamed00

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  TODO.md  codecov.yml  conanfile.txt  make.sh
docs/: Doxyfile.in  doc_conan.cmake  doxygen.cmake  extra_doc.in
ext/glad/: glad.cpp  glad.h
include/app/: Core.hpp  IParser.hpp
include/app/shell/: Parser.hpp  Reader.hpp
include/config/: api.hpp  cmake_config.hpp.in  macro.hpp  platform.hpp
include/data/: Component.hpp
include/dll/: Handler.hpp  Manager.hpp
include/ecs/: ECS.hpp
include/ecs/internal/: Component.hpp  Entity.hpp  List.hpp  Pool.hpp  World.hpp  implementation.hpp
include/graphic/: Event.hpp  IWindow.hpp  Key.hpp
include/scene/: IScene.hpp
include/tata/: tata.hpp
include/toto/: toto.hpp
include/utils/: utils.hpp  warning.hpp
resources/shaders/: simple.fs  simple.vs
src/app/: Core.cpp  app.cmake  main.cpp
src/app/shell/: Parser.cpp  Reader.cpp
src/dll/: Error.cpp  Handler.cpp  Manager.cpp  dll.cmake
src/module/: module.cmake
src/module/graphic/AbstractGLFW/: AbstractGLFW.cmake  EntryPoint.cpp  Keyboard.hpp  Shader.hpp  Window.cpp  Window.hpp
src/module/graphic/AbstractSFML/: AbstractSFML.cmake  EntryPoint.cpp  Window.cpp  Window.hpp
src/module/scene/Collision/: Collision.cmake  CollisionScene.cpp  CollisionScene.hpp  EntryPoint.cpp
src/module/scene/Example/: EntryPoint.cpp  Example.cmake  ExampleScene.cpp  ExampleScene.hpp
src/tata/: tata.cmake  tata.cpp
src/toto/: toto.cmake  toto.cpp
tests/: tests.cmake
tests/dll/: HandlerUnitTest.cpp  ManagerUnitTest.cpp  dll_unit_test.cmake  dll_unit_test.cpp
tests/dll/lib_shared_test/: lib_shared_test.cpp
tests/tata/: tata_unit_test.cmake  tata_unit_test.cpp
tests/toto/: toto_unit_test.cmake  toto_unit_test.cpp
